# LLROPS

./: .gitignore  pyproject.toml  run_llrops.sbatch
configs/: llrops_oc_residuals.yml  llrops_reflector_bias_adjustment_detailed.yml
docs/: ARCHITECTURE.md  CHANGELOG_v25.md  CHANGELOG_v27.md  CHANGELOG_v28.md  CHANGELOG_v29.md  CHANGELOG_v30.md  CHANGELOG_v31.md  CHANGELOG_v32.md  CHANGELOG_v33.md  CHANGELOG_v34.md  CHANGELOG_v35.md  CHANGELOG_v36.md  CHANGELOG_v37.md  NORMAL_POINTS.md  REFACTOR_REVIEW_ESTIMATION_BASE.md  ROBUST_VCE_LLR_THEORY.md  STATION_RANGE_BIAS.md  TIME.md  llr_adjustment_technical_design.md  llr_grouped_vce_bias_igg3_technical_design.md  python-module-naming-optimization.md
llrops/: __init__.py  __main__.py  cli.py  lifecycle.py
tests/: test_adjustment_config.py  test_adjustment_iteration_callback.py  test_adjustment_linearized_outliers.py  test_adjustment_solver.py  test_catalogs.py  test_cli_mpi_lifecycle.py  test_config_overrides.py  test_earth_orientation_iers2010.py  test_ephemerides_and_reference_frames.py  test_ephemerides_frames_core.py  test_epoch.py  test_estimation_strict_solve.py  test_grouped_vce.py  test_lifecycle_and_program_alias.py  test_lifecycle_and_program_registry.py  test_linearized_least_squares.py  test_mpi_spec_broadcast.py  test_normal_equations.py  test_normal_point_io.py  test_observation_config.py  test_observation_core.py  test_observation_equations.py  test_observation_result_writer.py  test_observation_results.py  test_oc_table_rows.py  test_parametrization_contracts.py  test_program_registry.py  (+6 more)
(+101 files in other folders)
