[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llrops"
version = "35.0.0.dev0"
description = "GROOPS-inspired Lunar Laser Ranging processing system"
requires-python = ">=3.14"
dependencies = [
    "calcephpy>=5.0.0",
    "mpi4py>=4.1.2",
    "numpy>=2.5.1",
    "pyerfa>=2.0.1.5",
    "pysolid>=0.3.4",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.68.4",
    "coverage",
    "pytest-cov",
]


[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]
mpi = ["mpi4py>=3.1"]
physics = ["pysolid>=0.0.1"]

[project.scripts]
llrops = "llrops.cli:main"

[tool.setuptools.packages.find]
include = ["llrops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
